--- a/src/html/shared/_footer.html
+++ b/src/html/shared/_footer.html
@@ -1,3 +1,22 @@
-<footer>
-  <h1>FOOTER</h1>
-</footer>
+<div class="container">
+  <div id="pricing" class="row">
+    <div class="col-4">
+      <div class="item">
+        <h4>Privacy</h4>
+        <p>Copyright 2016</p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="item">
+        <h4>Terms</h4>
+        <p>Original</p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="item">
+        <h4>Contact</h4>
+        <p>Trombones</p>
+      </div>
+    </div>
+  </divn>
+</div>
