--- a/src/html/shared/_header.html
+++ b/src/html/shared/_header.html
@@ -1,3 +1,11 @@
-<header>
-  <h1>HEADER</h1>
+<header id="header">
+  <div class="nav-brand">
+    <p><img id="header-img" src="/img/icon-logo.png" alt="a" width="30"  height="30"></p>
+    <h1>Original Trombones</h1>
+  </div>
+  <nav id="nav-bar" class="header-link">
+    <a class="nav-link" href="#features">Features</a>
+    <a class="nav-link" href="#how-it-works">How It Work</a>
+    <a class="nav-link" href="#">Princing</a>
+  </nav>
 </header>
