--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,112 @@
 {% extends 'layout/_main.html' %}
 
 {% block content %}
-<main>abc</main>
+<main id="main">  
+  <form action="https://www.freecodecamp.org/email-submit">
+    <div class="field">
+      <h3>Handcrafted, home-made masterpieces</h3>
+      <div class="control center">
+        <input type="email" id="email" placeholder="Enter your email address" required>
+        <button id="submit" type="submit">GET STARTED</button>
+      </div>
+    </div>
+  </form>
+  <div class="container">
+    <div id="features">
+      <article class="media">
+        <figure class="media__left">
+          <div class="img is-50x50">
+            <img src="/img/icon1.png" alt="a">
+          </div>
+        </figure>
+        <div class="media__content">
+          <h2>Premium Materials</h2>
+          <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+        </div>
+      </article>
+      <article class="media">
+        <figure class="media__left">
+          <div class="img is-50x50">
+            <img src="/img/icon2.png" alt="a">
+          </div>
+        </figure>
+        <div class="media__content">
+          <h2>Fast Shipping</h2>
+          <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+        </div>
+      </article>
+      <article class="media">
+        <figure class="media__left">
+          <div class="img is-50x50">
+            <img src="/img/icon3.png" alt="a">
+          </div>
+        </figure>
+        <div class="media__content">
+          <h2>Quality Assurance</h2>
+          <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+        </div>
+      </article>
+    </div>
+  </div>
+
+  <div id="how-it-works">
+    <iframe id="video" src="https://www.freecodecamp.org/learn/" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <div class="container">
+    <div id="how-it-works" class="row">
+      <div class="col-4 col--sm-12">
+        <div class="product">
+          <div class="level">
+            <p>TENOR TROMBONE</p>
+          </div>
+          <div>
+            <h2>$600$</h2>
+            <p>Lorem ipsum.</p>
+            <p>Lorem ipsum.</p>
+            <p>Lorem ipsum dolor.</p>
+            <p>Lorem ipsum.</p>
+          </div>
+          <div class="button">
+            <button type="button">Select</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-4 col--sm-12">
+        <div class="product">
+          <div class="level">
+            <p>TENOR TROMBONE</p>
+          </div>
+          <div>
+            <h2>$600$</h2>
+            <p>Lorem ipsum.</p>
+            <p>Lorem ipsum.</p>
+            <p>Lorem ipsum dolor.</p>
+            <p>Lorem ipsum.</p>
+          </div>
+          <div class="button">
+            <button type="button">Select</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-4 col--sm-12">
+        <div class="product">
+          <div class="level">
+            <p>TENOR TROMBONE</p>
+          </div>
+          <div>
+            <h2>$600$</h2>
+            <p>Lorem ipsum.</p>
+            <p>Lorem ipsum.</p>
+            <p>Lorem ipsum dolor.</p>
+            <p>Lorem ipsum.</p>
+          </div>
+          <div class="button">
+            <button type="button">Select</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
 {% endblock %}
