--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@
       </div>
     </div>
   </form>
+  
   <div class="container">
     <div id="features">
       <article class="media">
@@ -54,7 +55,7 @@
   </div>
 
   <div class="container">
-    <div id="how-it-works" class="row">
+    <div class="row">
       <div class="col-4 col--sm-12">
         <div class="product">
           <div class="level">
