--- a/src/html/shared/_header.html
+++ b/src/html/shared/_header.html
@@ -1,11 +1,15 @@
 <header id="header">
-  <div class="nav-brand">
-    <p><img id="header-img" src="/img/icon-logo.png" alt="a" width="30"  height="30"></p>
-    <h1>Original Trombones</h1>
+  <div class="container">
+    <div class="header-content d-flex">
+      <div class="nav-brand d-flex">
+        <p class="img is-50x50"><img id="header-img" src="/img/icon-logo.png" alt="a"></p>
+        <h1>Original Trombones</h1>
+      </div>
+      <div id="nav-bar" class="link">
+        <a class="nav-link" href="#features">Features</a>
+        <a class="nav-link" href="#how-it-works">How It Work</a>
+        <a class="nav-link" href="#pricing">Princing</a>
+      </div>
+    </div>
   </div>
-  <nav id="nav-bar" class="header-link">
-    <a class="nav-link" href="#features">Features</a>
-    <a class="nav-link" href="#how-it-works">How It Work</a>
-    <a class="nav-link" href="#">Princing</a>
-  </nav>
 </header>
